Bug 1092859 - Always use soft volume in WinMM cubeb backend. r=padenot, a=lmandel

waveOutSetVolume adjusts the system (or app, on Vista up, but we only use
WinMM on XP) "PCM Volume" rather than a per-waveOut volume, which means any
audio stream we adjust the volume on has an undesirable higher-level effect.
Fix this by dropping the support for waveOutSetVolume and always using the
soft volume support.

While here, fix a bug in the soft volume code where float32 samples are
handled.